--- a/redirect.html
+++ b/redirect.html
@@ -1,5 +1,5 @@
 <html>
-<meta http-equiv="refresh" content="delay_time; URL=new_website_url" />
+<meta http-equiv="refresh" content="delay_time; URL=https://travel.mycwt.com/online-invoice/" />
 <body>
 </body>
 </html>
