--- a/redirect.html
+++ b/redirect.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="delay_time; URL=https://travel.mycwt.com/online-invoice/" />
+<head>
+    <meta http-equiv="refresh" content="5; URL=https://travel.mycwt.com/online-invoice/">
+    <!-- Replace '5' with the delay time in seconds before redirection -->
+</head>
 <body>
+    <p>Redirecting to <a href="https://travel.mycwt.com/online-invoice/">https://travel.mycwt.com/online-invoice/</a>...</p>
 </body>
 </html>
