--- a/redirect.html
+++ b/redirect.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="URL=https://travel.mycwt.com/online-invoice/">
+    <meta http-equiv="refresh" content="0;URL=https://travel.mycwt.com/online-invoice/">
     <!-- Replace '5' with the delay time in seconds before redirection -->
 </head>
 <body>
